crates/tree-sitter-pascal/grammar.js
		root:               $ => optional(choice(
			$.program,
			$.library,
			$.unit,
			$._definitions // For include files
		)),

		// HIGH LEVEL ----------------------------------------------------------

		assignment:      $ => op.infix(1,
			choice($._expr, $.varAssignDef),
			choice(
				$.kAssign,
				...enable_if(fpc,
					$.kAssignAdd, $.kAssignSub, $.kAssignMul, $.kAssignDiv
				)
			),
			$._expr
		),
		varAssignDef:          $ => seq($.kVar, $.identifier,
			optional(seq(
				':',
				field('type', $.typeref)
			))),
		caseLabel:       $ => seq(delimited1(choice($._expr, $.range)), ':'),

		_expr:           $ => choice(
			$._ref, $.exprBinary, $.exprUnary,
			...enable_if(delphi, $.exprConditional)
		),

		// Bind below binary operators and prefer ordinary if statements at block level.
		exprConditional: $ => prec.right(-1, seq(
			$.kIf, field('condition', $._expr),
			$.kThen, field('then', $._expr),
			$.kElse, field('else', $._expr)
		)),

		_ref:            $ => choice(
			...enable_if(templates && fpc,
				// TODO: Ideally, the kSpecialize should be part of exprTpl,
				// but for some reason this leads to a rule conflict, so for
				// now we just put it here.
				//
				// Also, we have to write the rule in this weird weird way,
				// because if we just do
				//
				//   seq(optional($.kSpecialize), $.identifier)
				//
				// then we can't have a standalone identifier named
				// "specialize". (Bug in tree-sitter?)
				prec.left(choice(
					seq($.kSpecialize, $.identifier),
					seq(alias($.kSpecialize, $.identifier)),
				))
			),
			$.identifier,
			$._literal,  $.inherited, $.exprDot,
			$.exprBrackets, $.exprParens, $.exprSubscript, $.exprCall,
			alias($.exprDeref, $.exprUnary),
			alias($.exprAs, $.exprBinary),
			...enable_if(templates, $.exprTpl),
			...enable_if(lambda, $.lambda),
			$.ppFragmentExpr,
		),

		exprDot:         $ => op.infix(5, $._ref, $.kDot, $._ref),
		exprCall:        $ => op.args(5, $._ref, '(',   optional($.exprArgs), ')'  ),

		// Pascal legacy string formatting for WriteLn(foo:4:3) etc.
		exprArgs:        $ => delimited1(seq($._expr, optional($.legacyFormat))),
		// A separate reduction distinguishes `is not T` from `is (not T)`.
		_exprIsNot:      $ => prec(5, seq($.kIs, $.kNot)),

		exprBinary:      $ => choice(
			op.infix(1, $._expr, $.kLt,  $._expr),
			op.infix(1, $._ref,  $.kLt,  $._expr),
			op.infix(1, $._expr, $.kEq,  $._expr),
			op.infix(1, $._expr, $.kNeq, $._expr),
			op.infix(1, $._expr, $.kGt,  $._expr),
			op.infix(1, $._expr, $.kLte, $._expr),
			op.infix(1, $._expr, $.kGte, $._expr),
			op.infix(1, $._expr, $.kIn,  $._expr),
			op.infix(1, $._expr, $.kIs,  $._expr),
			...enable_if(delphi,
				op.infix(1, $._expr, seq($.kNot, $.kIn), $._expr),
				op.infix(1, $._expr, $._exprIsNot, $._expr)
			),

			op.infix(2, $._expr, $.kAdd, $._expr),
			op.infix(2, $._expr, $.kSub, $._expr),
			op.infix(2, $._expr, $.kOr,  $._expr),
			op.infix(2, $._expr, $.kXor, $._expr),

			op.infix(3, $._expr, $.kMul, $._expr),
			op.infix(3, $._expr, $.kFdiv,$._expr),
			op.infix(3, $._expr, $.kDiv, $._expr),
			op.infix(3, $._expr, $.kMod, $._expr),
			op.infix(3, $._expr, $.kAnd, $._expr),
			op.infix(3, $._expr, $.kShl, $._expr),
			op.infix(3, $._expr, $.kShr, $._expr),
		),

		exprUnary:       $ => choice(
			op.prefix(4,  $.kNot,  $._expr),
			op.prefix(4,  $.kAdd,  $._expr),
			op.prefix(4,  $.kSub,  $._expr),
			op.prefix(4,  $.kAt,   $._expr),
		),

		exprParens:      $ => prec.left(5,seq('(', $._expr, ')')),

		// Set or array literal
		exprBrackets:       $ => seq(
			'[', delimited(choice($._expr, $.range)), ']'
		),

		// TYPES ---------------------------------------------------------------

		type:            $ => pp($,choice(
			$.typeref,
			$.declMetaClass,
			$.declEnum,
			$.declSet,
			$.declArray,
			$.declFile,
			$.declString,
			$.declProcRef,
			$.declSubRange,
		)),

		// Pascal subrange type alias: `TDigit = 0..9;` or
		// `TMultiPayProcs = sppShift4 .. sppTenderRetail;`. Bounds are
		// narrowed (not full `_expr`) so that `type = '(' ident ')'` stays
		// unambiguous against `declEnum`; in particular we exclude paren-
		// wrapped expressions so `(` can only start a `declEnum`. Bounds are
		// arithmetic constant expressions such as `-MaxLongint`,
		// `Low(Word)` or `BitsPerInt - 1`, but never comparisons, so that
		// `const X: 0..9 = 5;` keeps `= 5` as its value.
		declSubRange:    $ => prec(1, seq(
			$._subRangeBound, '..', $._subRangeBound
		)),
		_subRangeBound:  $ => choice(
			$.literalNumber,
			$.literalString,
			$._typeref,
			alias($._subRangeCall,   $.exprCall),
			alias($._subRangeUnary,  $.exprUnary),
			alias($._subRangeBinary, $.exprBinary),
		),
		typeref:         $ => seq(
			...enable_if(fpc, field('_dummy', optional($.kSpecialize))),
			$._typeref,
			...enable_if(delphi, optional(prec.right(seq($.kDeprecated, optional($._expr))))),
		),

		_typeref:        $ => choice(
			$.identifier, $.typerefDot,
			...enable_if(templates, $.typerefTpl),
			$.typerefPtr,
			$.ppFragmentExpr,
		),

		genericDot:      $ => op.infix(1,$._genericName, $.kDot, $._genericName),
		_genericName:    $ => choice(
			$.identifier, $.genericDot, ...enable_if(templates, $.genericTpl)
		),
		literalString:   $ => repeat1($._literalString),
		_literalString:  $ => choice(/'[^']*'/, $.literalChar, $._literalStringMultiline),
		literalChar:     $ => seq('#', $._literalInt),
		literalNumber:   $ => choice($._literalInt, $._literalFloat),
		// Delphi 11 allows `_` as a digit separator after the first digit.
		_literalInt:     $ => choice(
			token.immediate(/[-+]?[0-9][0-9_]*/),
			token.immediate(/\$[a-fA-F0-9][a-fA-F0-9_]*/),
			...enable_if(fpc || delphi, token.immediate(/%[01][01_]*/))
		),
		_literalFloat:   $ => prec(10,
			/[-+]?([0-9][0-9_]*)?\.?[0-9][0-9_]*([eE][+-]?[0-9][0-9_]*)?/
		),

		range:           $ => seq(
			$._expr, '..', $._expr
		),

		// DEFINITIONS --------------------------------------------------------

		_definitions:    $ => repeat1($._definition),
		defProc:         $ => seq(
			pp($, field('header', $.declProc)),
			$._defProcImpl
		),

		_defProcImpl:    $ => seq(
			field('local', optional($._definitions)),
			$._defProcBody
		),

		defaultValue:    $ => seq($.kEq, $._initializer),

		// Declaration sections

		declTypes:       $ => seq(
			$.kType,
			repeat(choice($.declType, $.ppBlock))
		),

		declConsts:      $ => seq(
			optional($.kClass),
			choice($.kConst, $.kResourcestring),
			repeat(choice($.declConst, $.ppBlock)),
		),

		// Declarations

		declType:        $ => seq(
			...enable_if(rtti, optional($.rttiAttributes)),
			...enable_if(fpc, optional($.kGeneric)),
			field('name', $._genericName), $.kEq,
			field('type',
				choice(
					seq(optional($.kType), $.type),
					choice($.type),
					$.declClass,
					$.declIntf,
					$.declHelper,
				)
			),
			';',
			repeat($._procAttribute)
		),

		declProc:        $ => seq(
			...enable_if(rtti, optional($.rttiAttributes)),
			choice($._declProc, $._declOperator),
		),

		declConst:       $ => seq(
			...enable_if(rtti, optional($.rttiAttributes)),
			field('name', $.identifier),
			optional(seq(':', field('type', $.type))),
			field('defaultValue', $.defaultValue),
			';',
			repeat($._procAttribute)
		),

		declArray:       $ => seq(
			optional($.kPacked),
			$.kArray,
			optional(seq('[', delimited(choice($.range, $._expr)), ']')),
			$.kOf, $.type
		),
		declClass:       $ => seq(
			optional($.kPacked),
			choice(
				$.kClass, $.kRecord, $.kObject,
				...enable_if(objc,
					$.kObjcclass, $.kObjccategory, $.kObjcprotocol
				)
			),
			optional(choice(
				$.kAbstract, $.kSealed,
				...enable_if(objc,
					seq($.kExternal, optional(seq($.kName, $._expr)))
				)
			)),
			field('parent', optional(seq('(',delimited($.typeref),')'))),
			optional($._declClass)
		),

		_declClass:      $ => seq(
			optional($._declFields),
			optional($._classDeclarations),
			repeat(choice($.declSection, $.ppDeclSection)),
			optional($.declVariant),
			$.kEnd
		),

		_declProc:       $ => seq(
			...enable_if(fpc, optional($.kGeneric)),
			optional($.kClass),
			choice($.kProcedure, $.kFunction, $.kConstructor, $.kDestructor),
			field('name', $._genericName),
			field('args', optional($.declArgs)),
			optional(seq(
				':',
				field('type', $.typeref),
			)),
			field('assign', optional($.defaultValue)),
			';',
			repeat($._procAttributeNoExt)
		),

		_declOperator:   $ => seq(
			optional($.kClass),
			$.kOperator,
			field('name', $._operatorName),
			field('args', optional($.declArgs)),
			...enable_if(fpc, field('resultName', optional($.identifier))),
			optional(seq(':', field('type', $.type))),
			field('assign', optional($.defaultValue)),
			';',
			repeat($._procAttributeNoExt)
		),

		declArgs:        $ => seq('(', delimited($.declArg, ';'), ')'),

		declArg:         $ => choice(
			seq(
				choice($.kVar, $.kOut, $.kConstref,
					seq($.kConst, ...enable_if(delphi, optional($.rttiAttributes)))),
				field('name', delimited1($.identifier)),
				optional(seq(
					':', field('type', $.type),
					field('defaultValue', optional($.defaultValue))
				))
			),
			seq(
				field('name', delimited1($.identifier)), ':',
				field('type', $.type),
				field('defaultValue', optional($.defaultValue))
			)
		),

		// Attributes & declaration hints

		_procAttribute:  $ => /*pp($,*/choice(
			seq(field('attribute', $.procAttribute), ';'),
			// FPC-specific syntax, e.g. procedure myproc; [public; alias:'bla'; cdecl];
			...enable_if(fpc, seq(
				'[',
				delimited(field('attribute', choice($.procAttribute, $.procExternal))),
				']', ';'
			))
		)/*)*/,
		rttiAttributes:  $ => repeat1(seq(
			// Note: "Identifier:" is for tagging parameters of procedures (Delphi)
			'[', optional(seq($.identifier, ':')), delimited($._ref), ']'
		)),

		_initializer:    $ => prec(2,seq(
			choice($._expr, $.recInitializer, $.arrInitializer)
		)),

		// record initializer
		recInitializer:  $ => seq(
			'(',
			delimited1( $.recInitializerField, ';'),
			')'
		),

		recInitializerField: $ => choice(
			seq(field('name',$.identifier), ':', field('value', $._initializer)),
			field('value', $._initializer)
		),

		// array initializer
		arrInitializer:  $ => prec(1,seq('(', delimited1($._initializer), ')')),

		// TERMINAL SYMBOLS ----------------------------------------------------

		kBegin:            $ => /begin/i,
		kEnd:              $ => /end/i,
		kVar:              $ => /var/i,
		kConst:            $ => /const/i,
		kOut:              $ => /out/i,
		kType:             $ => /type/i,
		kClass:            $ => /class/i,
		kRecord:           $ => /record/i,
		kArray:            $ => /array/i,
		kOf:               $ => /of/i,
		kDot:              $ => '.',
		kLt:               $ => '<',
		kEq:               $ => '=',
		kAdd:              $ => '+',
		kSub:              $ => '-',
		kAssign:           $ => ':=',
		kAnd:              $ => /and/i,
		kNot:              $ => /not/i,
		kIs:               $ => /is/i,
		kIn:               $ => /in/i,

		kFor:              $ => /for/i,
		kIf:               $ => /if/i,
		kThen:             $ => /then/i,
		kElse:             $ => /else/i,
		kOtherwise:        $ => /otherwise/i,
		kDo:               $ => /do/i,
		kCase:             $ => /case/i,
		kOperator:         $ => /operator/i,
		identifier:        $ => /[&]?[a-zA-Z_]+[0-9_a-zA-Z$]*/,
		comment:           $ => token(choice(
			seq('//', /[^\r\n]*/),
			seq('{', /([^$}][^}]*)?/, '}'),
			/[(][*]([^$*][^*]*)?[*]+([^)*][^*]*[*]+)*[)]/
		)),
	}
});
