crates/tree-sitter-pascal/test/corpus/literals.txt
===
Integers
===

const
  a = 1234567890;
  b = +123;
  c = -123;
  d = $123abc;

---

(root
  (declConsts (kConst)
    (declConst (identifier) (defaultValue (kEq) (literalNumber)))
    (declConst (identifier) (defaultValue (kEq) (literalNumber)))
    (declConst (identifier) (defaultValue (kEq) (literalNumber)))
    (declConst (identifier) (defaultValue (kEq) (literalNumber)))))


===
Floating point numbers
===

const
  a = 1.234567890;
  b = 1234567890.0;
  c = -1.2;
  d = +1.2;
  e = 1.2e3;
  f = 1.2e-3;
  g = .123;

---

(root
  (declConsts (kConst)
    (declConst (identifier)
      (defaultValue (kEq) (literalNumber)))
    (declConst (identifier)
      (defaultValue (kEq) (literalNumber)))
    (declConst (identifier)
      (defaultValue (kEq) (literalNumber)))
    (declConst (identifier)
      (defaultValue (kEq) (literalNumber)))
    (declConst (identifier)
      (defaultValue (kEq) (literalNumber)))
    (declConst (identifier)
      (defaultValue (kEq) (literalNumber)))
    (declConst (identifier)
      (defaultValue (kEq) (literalNumber)))))

===
Uppercase exponents
===

const
  a = 1.5E10;
  b = 1E5;
  c = 2.5E-3;

---

(root
  (declConsts (kConst)
    (declConst (identifier)
      (defaultValue (kEq) (literalNumber)))
    (declConst (identifier)
      (defaultValue (kEq) (literalNumber)))
    (declConst (identifier)
      (defaultValue (kEq) (literalNumber)))))

===
Digit separators
===

const
  a = 1_000_000;
  b = $FFFF_FFFF;
  c = %1010_0101;
  d = 1_000.000_1;
  e = 1_000E1_0;
  f = #1_0;

---

(root
  (declConsts (kConst)
    (declConst (identifier)
      (defaultValue (kEq) (literalNumber)))
    (declConst (identifier)
      (defaultValue (kEq) (literalNumber)))
    (declConst (identifier)
      (defaultValue (kEq) (literalNumber)))
    (declConst (identifier)
      (defaultValue (kEq) (literalNumber)))
    (declConst (identifier)
      (defaultValue (kEq) (literalNumber)))
    (declConst (identifier)
      (defaultValue (kEq) (literalString (literalChar))))))

===
Identifiers after numbers and ranges
===

type
  a = 1_0..2_0;
const
  _b = 3;

---

(root
  (declTypes (kType)
    (declType (identifier) (kEq)
      (type (declSubRange (literalNumber) (literalNumber)))))
  (declConsts (kConst)
    (declConst (identifier)
      (defaultValue (kEq) (literalNumber)))))

===
Strings
===

const
  a = 'Hello World';
  b = #123;
  c = #13#10;
  d = 'Hello'#13#10'World';
  e = 'Hello'#$0c#$0a'World'#13#10;

===
Multiline strings
===

const
  a = '''
    Hello 'World'
    It's ''quoted''
    ''';
  b = '''''
    Contains ''' inside
    ''''';
  c = '''
''' + 'tail';

---

(root
  (declConsts (kConst)
    (declConst (identifier)
      (defaultValue (kEq) (literalString)))
    (declConst (identifier)
      (defaultValue (kEq) (literalString)))
    (declConst (identifier)
      (defaultValue (kEq)
        (exprBinary (literalString) (kAdd) (literalString))))))

===
Multiline string as call argument
===

begin
  Query.SQL.Text := '''
    SELECT *
    FROM Users
    ''';
  Foo('''
    a
    ''', 1);
end

---

(root
  (blockTr (kBegin)
    (assignment
      (exprDot (exprDot (identifier) (kDot) (identifier)) (kDot) (identifier))
      (kAssign)
      (literalString))
    (statement
      (exprCall (identifier)
        (exprArgs (literalString) (literalNumber))))
    (kEnd)))

===
Quote-heavy single-line strings
===

const
  a = '''';
  b = 'it''s';
  c = '''x''';
  d = '''''';

---

(root
  (declConsts (kConst)
    (declConst (identifier)
      (defaultValue (kEq) (literalString)))
    (declConst (identifier)
      (defaultValue (kEq) (literalString)))
    (declConst (identifier)
      (defaultValue (kEq) (literalString)))
    (declConst (identifier)
      (defaultValue (kEq) (literalString)))))

===
Array initializer
===

const
  a: array of integer = (1, 2, 3, 4, 5);
  a: array[0..2, 0..2] of integer = 
    (
      (1, 2, 3),
      (4, 5, 6),
      (7, 8, 9)
    );

---

(root
  (declConsts (kConst)
    (declConst (identifier)
      (type (declArray (kArray) (kOf) (type (typeref (identifier)))))
      (defaultValue (kEq)
        (arrInitializer
          (literalNumber)
          (literalNumber)
          (literalNumber)
          (literalNumber)
          (literalNumber))))
    (declConst (identifier)
      (type
        (declArray (kArray)
          (range (literalNumber) (literalNumber))
          (range (literalNumber) (literalNumber))
          (kOf)
          (type (typeref (identifier)))))
      (defaultValue (kEq)
        (arrInitializer
          (arrInitializer
            (literalNumber)
            (literalNumber)
            (literalNumber))
          (arrInitializer
            (literalNumber)
            (literalNumber)
            (literalNumber))
          (arrInitializer
            (literalNumber)
            (literalNumber)
            (literalNumber)))))))


===
Record initializer
===

const
  a: TMyRec = (a: 1; b: 2; c: (d: 3; e: 4); 567);

---

(root
  (declConsts (kConst)
    (declConst (identifier) (type (typeref (identifier)))
      (defaultValue (kEq)
        (recInitializer
          (recInitializerField (identifier) (literalNumber))
          (recInitializerField (identifier) (literalNumber))
          (recInitializerField (identifier)
            (recInitializer
              (recInitializerField (identifier) (literalNumber))
              (recInitializerField (identifier) (literalNumber))))
          (recInitializerField (literalNumber)))))))

===
Sets
===

const
  a = [0..9, 'a'..'f', 'A'..'F'];

---

(root
  (declConsts (kConst)
    (declConst (identifier)
      (defaultValue (kEq)
        (exprBrackets
          (range (literalNumber) (literalNumber))
          (range (literalString) (literalString))
          (range (literalString) (literalString)))))))

===
Constant expression
===

const
  a = +1.2 + 3.4;
  a = +1.2 + +3.4;

---

(root
  (declConsts (kConst)
    (declConst (identifier)
      (defaultValue (kEq)
        (exprBinary
          (literalNumber)
          (kAdd)
          (literalNumber))))
    (declConst (identifier)
      (defaultValue (kEq)
        (exprBinary
          (literalNumber)
          (kAdd)
          (literalNumber))))))
